@@ -1,6 +1,7 @@
 0.16.2
  - fix: convert resource file extensions to lower-case (#81)
  - fix: escape html characters in logging panel
+ - enh: improve error message when registered dataset ID does not exist (#82)
 0.16.1
  - fix: generally increase timeout for package_revise
 0.16.0
